k8s/example/example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example

---
# run some container in the cluster
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
  namespace: example
spec:
  selector:
    matchLabels:
      app: example
  replicas: 1
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - name: web
          containerPort: 80
        volumeMounts:
        - name: storage
          mountPath: /mnt/storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: example

---
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: example
  annotations:
    # add service to tailnet with dns name
    tailscale.com/expose: "true"
    tailscale.com/hostname: "example"
    # add service to local dns via pihole
    external-dns.alpha.kubernetes.io/hostname: example.r.ss
spec:
  # give service a local ip
  type: LoadBalancer
  selector:
    app: example
  ports:
  - name: http
    port: 80
    targetPort: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: example
spec:
  ingressClassName: nginx
  rules:
    # expose to the internet
    - host: example.k8s.rileysnyder.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  example
                port:
                  number: 80
